SDL-ctypes 0.06
---------------
 - Python 2.3 support
 - Fixes to SDL_sound
 - Added playsound_simple test
 - Fixed pitch bug in pixels_numpy.py and added event loop

SDL-ctypes 0.05
---------------
 - Darwin support:
    - locate the SDL framework before passing to ctypes
    - Use RTLD_GLOBAL to workaround ctypes on Panther bug
    - Connect to window manager before SDL_Init(SDL_INIT_VIDEO) 
        - requires PyObjC
 - Added SDL.endian submodule
 - Pitch calculated correctly for returning SDL_Surface.pixels
 - SDL_WM_SetCaption and SDL_WM_GetCaption accept and return Unicode strings.
 - Removed SDL_opengl.h from SDL.constants
 - Added SDL_CreateCursor.
 - Documented struct classes
 - Added SDL_sound (untested)

SDL-ctypes 0.04
---------------
 - Support for 1 bit depth surfaces.
 - Ported all relevant SDL tests.
 - Removed unit/ directory; all tests will reside in test/.
 - Added SDL_GL_GetAttribute
 - Added to_string method in SDL_array
 - Removed read-only check from SDL_PixelFormat
 - Added pixel and bitfield access to SDL_Overlay
 - SDL_Timer allows timer to be disabled by setting the callback to None
 - Implemented SDL_WM_SetIcon
 - Fixed SDL_SetEventFilter callback
 - Fixed SDL_Surface.pixels size to respect pitch rather than width
 - SDL.dll refactored into a class, so it can be used for any SDL-like
   library (i.e., SDL_image, SDL_ttf, etc)
 - SDL.dll no longer requires a version function to load, will presume
   version 0.0.0 if unversioned (needed for SDL_image).
 - Added SDL_ttf and SDL_mixer support
 - Added as_int16 and as_int32 methods to SDL_array.
 - Support for SDL 1.2.11 (no API change)

SDL-ctypes 0.03
---------------
 - Set func_name instead of __name__ in `SDL.dll.function`; this should
   fix an error about __name__ being unwriteable in OS X (untested).
 - Provide access to unpythonified functions via _SDL_PeepEvents etc,
   rather  than SDL.dll._dll.SDL_PeepEvents.  This is cleaner, and sets